Hide overflow, prevent scrollbars on fxhash

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@ body {
   width: 100vw;
   height: 100vh;
   padding: 0;
+  overflow: hidden;
 }
 
 #app {
